# CoreView3D

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/data/: sessions.db
backend/scripts/: summarize.py
backend/src/api/: main.py
backend/src/coreview3d/api/: main.py
backend/src/coreview3d/core/: lithology.py
backend/src/coreview3d/geometry/: cross_section.py  trajectory.py
backend/src/coreview3d/models/: cross_section.py  drillhole.py
backend/src/coreview3d/parsers/: csv_parser.py  excel_parser.py
backend/src/coreview3d/routers/: cross_section_router.py  data_router.py  session_router.py
backend/src/coreview3d/store/: store.py
backend/tests/: conftest.py  helpers.py  test_conf.py  test_cross_section.py  test_cross_section_geometry.py  test_e2e.py  test_excel_parser.py  test_lithology.py  test_models.py  test_parser.py  test_persistence.py
data/examples/: survey.csv
data/examples/mansfield/: Collar-Mansfield.csv  Lithology-Mansfield.csv  Survey-Mansfield.csv
data/synthetic/: assays.csv  collar.csv
data/synthetic_vertical/: collar.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/scripts/: summarize_repo.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/Geo3D/: Geo3DAxisWidget.tsx  Geo3DBoundingBox.tsx  Geo3DColors.tsx  Geo3DDrillhole.tsx  Geo3DFactory.tsx  Geo3DGrid.tsx  Geo3DInterpolation.ts  Geo3DRegistry.ts  Geo3DScene.tsx
frontend/src/components/: FileLoader.tsx  Viewer.tsx
frontend/src/core/: DrillHole.ts
frontend/src/cross_sections/: CrossSectionChart.tsx  CrossSectionDlg.tsx  CrossSectionLocalStorage.ts  CrossSectionStore.ts  CrossSectionViewer.tsx  useCrossSectionData.ts
frontend/src/drillholes/base/: DrillHole.ts
frontend/src/drillholes/components/: DataLoaderDlg.tsx
frontend/src/geo3d/base/: Geo3DAxis.ts  Geo3DBoundingBox.ts  Geo3DGrid.ts  Geo3DObject.ts  Geo3DSpriteObject.ts  Geo3DTextSprite.ts
frontend/src/geo3d/components/: Geo3DScene.tsx
frontend/src/geo3d/core/: Geo3DColors.ts  Geo3DDrillhole.ts  Geo3DInterpolation.ts  Geo3DRegistry.ts
frontend/src/utils/: Bounds.ts  Trajectory.ts
(+15 files in other folders)
