[project]
name = "coreview3d-backend"
version = "0.1.0"
description = "Backend API for CoreView3D mining drillhole viewer"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "bruno", email = "your.email@example.com"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages=["src/coreview3d", "src/api"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]